# online_store_hw_html

./: pyproject.toml
html/: category.html  category1.html  contacts.html  main.html
src/: web.py
