[tool.poetry]
name = "online-store-hw-html"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.link.dependencies]
flake8 = "^7.1.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
